Fix alignment of action buttons in cards on eval page

--- a/frontend_v2/src/app/components/challenge/challengeevaluation/challengeevaluation.component.scss
+++ b/frontend_v2/src/app/components/challenge/challengeevaluation/challengeevaluation.component.scss
@@ -6,6 +6,12 @@
   padding-right: 10px;
 }
 
+.ev-card-panel {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .tnc-pad {
   padding-left: 10px;
   padding-right: 15px;
@@ -21,6 +27,16 @@
   padding-right: 0px;
 }
 
+.ev-action {
+  display: flex;
+  flex-direction: row;
+  padding-top: 2.5px;
+}
+
+.ev-upload-action {
+  margin-right: 10px;
+}
+
 @include screen-small {
   .ev-pad {
     padding-right: 15px;
@@ -29,4 +45,18 @@
   .tnc-pad {
     padding-left: 15px;
   }
+
+  .ev-card-panel {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .ev-action {
+    margin-top: 10px;
+    padding-left: 15px;
+    display: flex;
+    flex-direction: row;
+  }
+
 }
